--- a/TODOlist/TODOlist.csproj
+++ b/TODOlist/TODOlist.csproj
@@ -55,7 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FileManager.cs" />
     <Compile Include="Task.cs" />
+    <Compile Include="TaskListManager.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
